k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airia-test-pod
  namespace: airia
  labels:
    app: airia-test-pod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: airia-test-pod
